--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/header.ejs') %>
+<%- include('./partials/header.ejs') %>
+
   <body>
     <%- include('./partials/navbar.ejs') %>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <!-- carousel -->
+        <div class="wrapper">
+          <button onclick="scrolldown()">EXPLORE MORE <i class="fas fa-angle-double-down"></i></button>
+          <div class="swiper-container">
+
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+
+              <div class="swiper-slide" id="slide1"></div>
+              <div class="swiper-slide" id="slide2"></div>
+              <div class="swiper-slide" id="slide3"></div>
+              <div class="swiper-slide" id="slide4"></div>
+              <div class="swiper-slide" id="slide5"></div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-scrollbar"></div>
+          </div>
+          <!-- carousel ending -->
+          <div class="container" id="sectionpage">
+            <a href="" class="item item2"><div >FESTIVALS</div></a>
+            <a href="" class="item item3"><div >WILDLIFE</div></a>
+            <a href="" class="item item1"><div >DESTINATIONS</div></a>
+            <a href="" class="item item4"><div >LAKES</div></a>
+            <a href="" class="item item5"><div >WATERFALLS</div></a>
+            <a href="" class="item item6"><div >MUSEUMS</div></a>
+            <a href="" class="item item7"><div >FOOD</div></a>
+            <a href="" class="item item8"><div >TEMPLES</div></a>
+            <a href="" class="item item9"><div >ADVENTURE</div></a>
+            <a href="" class="item item10"><div >HERITAGE</div></a>
+            <a href="" class="item item11"><div >CAVES</div></a>
+          </div>
+        </div>
+        <!-- js scripts -->
+        <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        <script src="/js/slider.js"></script>
   </body>
+
 </html>
