--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
         </ol>
         <!-- carousel -->
         <div class="wrapper">
-          <button onclick="scrolldown()">EXPLORE MORE <i class="fas fa-angle-double-down"></i></button>
+          <button class="carousel-btn" onclick="scrolldown()">EXPLORE MORE <i class="fas fa-angle-double-down"></i></button>
           <div class="swiper-container">
 
             <div class="swiper-wrapper">
