--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500&display=swap');
 body {
   background-color: #36096d;
   background-image: linear-gradient(315deg, #36096d 0%, #37d5d6 74%);
+  font-family: 'Montserrat', sans-serif;
 }
 
 nav {
@@ -67,8 +69,9 @@ nav {
   border-radius: 10px;
   margin: 0.3rem 0;
   transition: all 0.7s ease;
-  font-size: 4rem;
+  font-size: 2.5rem;
   color: white;
+  font-weight: 200;
 }
 a {
   text-decoration: none;
@@ -175,5 +178,6 @@ a {
   }
   .item {
     font-size: 3rem;
+    font-weight: 200;
   }
 }
