--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,10 @@ nav {
   -moz-box-shadow: 0 8px 6px -6px rgb(105, 104, 104);
   box-shadow: 0 8px 6px -6px rgb(105, 104, 104);
 }
-
+.nav-quote {
+  font-size: 1.3rem;
+  font-style: italic;
+}
 .swiper-container {
   height: 650px;
 }
