--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -60,8 +60,8 @@
           <a class="nav-link active" aria-current="page" href="#">Contact</a>
         </li>
       </ul>
-      <span class="navbar-text" style="margin-left: auto">
-        Small quote about travelling
+      <span class="nav-quote navbar-text" style="margin-left: auto">
+        To Inspire Your Next Adventure
       </span>
     </div>
   </div>
