added specific route pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,17 +31,17 @@
           </div>
           <!-- carousel ending -->
           <div class="container" id="sectionpage">
-            <a href="" class="item item2"><div >FESTIVALS</div></a>
-            <a href="" class="item item3"><div >WILDLIFE</div></a>
-            <a href="" class="item item1"><div >DESTINATIONS</div></a>
-            <a href="" class="item item4"><div >LAKES</div></a>
-            <a href="" class="item item5"><div >WATERFALLS</div></a>
-            <a href="" class="item item6"><div >MUSEUMS</div></a>
-            <a href="" class="item item7"><div >FOOD</div></a>
-            <a href="" class="item item8"><div >TEMPLES</div></a>
-            <a href="" class="item item9"><div >ADVENTURE</div></a>
-            <a href="" class="item item10"><div >HERITAGE</div></a>
-            <a href="" class="item item11"><div >CAVES</div></a>
+            <a href="/section/festivals" class="item item2"><div >FESTIVALS</div></a>
+            <a href="/section/wildlife" class="item item3"><div >WILDLIFE</div></a>
+            <a href="/section/destinations" class="item item1"><div >DESTINATIONS</div></a>
+            <a href="/section/lakes" class="item item4"><div >LAKES</div></a>
+            <a href="/section/waterfalls" class="item item5"><div >WATERFALLS</div></a>
+            <a href="/section/museums" class="item item6"><div >MUSEUMS</div></a>
+            <a href="/section/food" class="item item7"><div >FOOD</div></a>
+            <a href="/section/temples" class="item item8"><div >TEMPLES</div></a>
+            <a href="/section/adventure" class="item item9"><div >ADVENTURE</div></a>
+            <a href="/section/heritage" class="item item10"><div >HERITAGE</div></a>
+            <a href="/section/caves" class="item item11"><div >CAVES</div></a>
           </div>
         </div>
         <!-- js scripts -->
