--- a/public/styles.css
+++ b/public/styles.css
@@ -1,186 +1,291 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500&display=swap');
 body {
-  background-color: #36096d;
-  background-image: linear-gradient(315deg, #36096d 0%, #37d5d6 74%);
-  font-family: 'Montserrat', sans-serif;
+    background-color: #36096d;
+    background-image: linear-gradient(315deg, #36096d 0%, #37d5d6 74%);
+    font-family: 'Montserrat', sans-serif;
 }
 
 nav {
-  -webkit-box-shadow: 0 8px 6px -6px rgb(105, 104, 104);
-  -moz-box-shadow: 0 8px 6px -6px rgb(105, 104, 104);
-  box-shadow: 0 8px 6px -6px rgb(105, 104, 104);
+    -webkit-box-shadow: 0 8px 6px -6px rgb(105, 104, 104);
+    -moz-box-shadow: 0 8px 6px -6px rgb(105, 104, 104);
+    box-shadow: 0 8px 6px -6px rgb(105, 104, 104);
 }
+
 .nav-quote {
-  font-size: 1.3rem;
-  font-style: italic;
+    font-size: 1.3rem;
+    font-style: italic;
 }
+
 .swiper-container {
-  height: 650px;
+    height: 650px;
 }
 
 .swiper-slide {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: large;
-  background-repeat: no-repeat;
-  background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: large;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #slide1 {
-  background-image: url(images/img3.jpg);
-  background-size: 100vw;
+    background-image: url(images/img3.jpg);
+    background-size: 100vw;
 }
 
 #slide2 {
-  background-image: url(images/img2.jpg);
-  background-size: 100vw;
-  background-position: center top;
+    background-image: url(images/img2.jpg);
+    background-size: 100vw;
+    background-position: center top;
 }
 
 #slide3 {
-  background-image: url(images/img1.jpg);
-  background-size: 100vw;
+    background-image: url(images/img1.jpg);
+    background-size: 100vw;
 }
 
 #slide4 {
-  background-image: url(images/img4.jpg);
-  background-size: 100vw;
+    background-image: url(images/img4.jpg);
+    background-size: 100vw;
 }
 
 #slide5 {
-  background-image: url(images/img5.jpg);
-  background-size: 100vw;
+    background-image: url(images/img5.jpg);
+    background-size: 100vw;
 }
 
 .container {
-  background-color: #eee;
-  margin: 20px auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 300px;
-
-  padding: 1rem;
-  border-radius: 10px;
-  gap: 10px 10px;
+    background-color: #eee;
+    margin: 20px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 300px;
+    padding: 1rem;
+    border-radius: 10px;
+    gap: 10px 10px;
 }
 
 .item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  margin: 0.3rem 0;
-  transition: all 0.7s ease;
-  font-size: 2.5rem;
-  color: white;
-  font-weight: 200;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin: 0.3rem 0;
+    transition: all 0.7s ease;
+    font-size: 2.5rem;
+    color: white;
+    font-weight: 200;
 }
+
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .item1 {
-  background: url(images/img10.jpg);
-  background-size: cover;
+    background: url(images/img10.jpg);
+    background-size: cover;
 }
+
 .item2 {
-  background: url(images/img8.jpg);
-  background-size: cover;
+    background: url(images/img8.jpg);
+    background-size: cover;
 }
+
 .item3 {
-  background: url(images/img7.jpg);
-  background-size: cover;
+    background: url(images/img7.jpg);
+    background-size: cover;
 }
+
 .item4 {
-  background: url(images/img11.jpg);
-  background-size: cover;
+    background: url(images/img11.jpg);
+    background-size: cover;
 }
+
 .item5 {
-  background: url(images/img12.jpg);
-  background-size: cover;
+    background: url(images/img12.jpg);
+    background-size: cover;
 }
+
 .item6 {
-  background: url(images/img13.jpg);
-  background-size: cover;
+    background: url(images/img13.jpg);
+    background-size: cover;
 }
+
 .item7 {
-  background: url(images/img15.jpg);
-  background-size: cover;
+    background: url(images/img15.jpg);
+    background-size: cover;
 }
+
 .item8 {
-  background: url(images/img16.jpg);
-  background-size: cover;
+    background: url(images/img16.jpg);
+    background-size: cover;
 }
+
 .item9 {
-  background: url(images/img17.jpg);
-  background-size: cover;
+    background: url(images/img17.jpg);
+    background-size: cover;
 }
+
 .item10 {
-  background: url(images/img18.jpg);
-  background-size: cover;
+    background: url(images/img18.jpg);
+    background-size: cover;
 }
+
 .item11 {
-  background: url(images/img20.jpg);
-  background-size: cover;
+    background: url(images/img20.jpg);
+    background-size: cover;
 }
+
 .item:hover {
-  cursor: pointer;
-  background: black;
-  color: white;
+    cursor: pointer;
+    background: black;
+    color: white;
 }
+
 .carousel-btn {
-  position: absolute;
-  bottom: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 3;
-  background: transparent;
-  border: none;
-  color: white;
-  outline: none;
-  padding: 1rem;
-  font-size: 2rem;
-  animation: textgrowth 1s infinite alternate;
-  background-color: white;
-  color: black;
-  opacity: 0.7;
-  letter-spacing: 1px;
+    position: absolute;
+    bottom: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    background: transparent;
+    border: none;
+    color: white;
+    outline: none;
+    padding: 1rem;
+    font-size: 2rem;
+    animation: textgrowth 1s infinite alternate;
+    background-color: white;
+    color: black;
+    opacity: 0.7;
+    letter-spacing: 1px;
 }
 
 .carousel-btn:hover {
-  opacity: 1;
+    opacity: 1;
+}
+
+.sidenavbaricon {
+    background-color: white;
+    color: black;
+    display: none;
+}
+
+
+/* sidenavbar starts*/
+
+.sidenavbar {
+    z-index: 2;
+    background-color: rgb(212, 212, 212);
+    position: absolute;
+    width: 28vw;
+    height: 104.3vh;
+    right: 0;
+}
+.vanishsidenavbar{
+  display: none;
+}
+
+.placelist {
+    background-color: rgb(255, 255, 255);
+    padding: 1rem;
+    margin-bottom: 7px;
+    list-style: none;
+    cursor: pointer;
+    font-weight: 500;
+}
+
+.placelist:hover {
+    background-color: rgb(172, 170, 170);
+}
+
+.placeheaderparent {
+    width: 100vw;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.placeheader {
+    color: white;
+    background-color: rgb(182, 211, 219);
+    width: 100vw;
+    padding: 1rem;
+    text-align: center;
+}
+
+
+/* Contentdiv starts*/
+
+.Contentdiv {
+    margin: 1rem;
+    height: 100vh;
+    width: 69vw;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1rem;
 }
 
 @keyframes textgrowth {
-  0% {
-    font-size: 20px;
-  }
-  100% {
-    font-size: 21px;
-  }
+    0% {
+        font-size: 20px;
+    }
+    100% {
+        font-size: 21px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
-  #slide1,
-  #slide2,
-  #slide3,
-  #slide4,
-  #slide5 {
-    background-size: cover;
-  }
-  #slide3 {
-    background-position: center left;
-  }
-  .container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .carousel-btn {
-    bottom: 88%;
-    left: 50%;
-  }
-  .item {
-    font-size: 3rem;
-    font-weight: 200;
-  }
+    #slide1,
+    #slide2,
+    #slide3,
+    #slide4,
+    #slide5 {
+        background-size: cover;
+    }
+    #slide3 {
+        background-position: center left;
+    }
+    .container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .carousel-btn {
+        bottom: 88%;
+        left: 50%;
+    }
+    .item {
+        font-size: 3rem;
+        font-weight: 200;
+    }
+    .sidenavbar {
+        position: absolute;
+        width: 58vw;
+        height: 104.3vh;
+        right: 0%;
+    }
+    .Contentdiv {
+        margin-top: 1rem;
+        width: 90vw;
+    }
+    .sidenavbaricon {
+        display: inline;
+        padding: 0.7rem;
+        font-size: 1rem;
+        border-radius: 50%;
+        margin-left: 1rem;
+    }
+    .icon {
+        height: 1rem;
+        width: 1.2rem;
+    }
+    .placeheader {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: white;
+        background-color: gray;
+        width: 100vw;
+        padding: 1rem;
+        text-align: center;
+    }
 }
