--- a/views/route.ejs
+++ b/views/route.ejs
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/header.ejs') %>
+  <%- include('./partials/header.ejs') %>
 
   <body>
     <%- include('./partials/navbar.ejs') %>
-      <div class="placeheaderparent">
-        <div class="placeheader">Places <div class="sidenavbaricon"><i class="icon fas fa-chevron-left"></i></div>
+    <div class="placeheaderparent">
+      <div class="placeheader">
+        Places
+        <div class="sidenavbaricon">
+          <i class="icon fas fa-chevron-left"></i>
         </div>
       </div>
+    </div>
 
-      <div class="sidenavbar">
-        <!-- Dont provide space while giving name sof places . Same names will be used to fetch content from json -->
+    <div class="sidenavbar">
+      <!-- Dont provide space while giving name sof places . Same names will be used to fetch content from json -->
 
-        <li class="placelist">Imphal</li>
-        <li class="placelist">Bishnupur</li>
-        <li class="placelist">Thoubal</li>
-        <li class="placelist">Ukhrul</li>
-        <li class="placelist">Churachandpur</li>
-        <li class="placelist">Senapati</li>
-        <li class="placelist">Tamenglong</li>
-        <li class="placelist">Place9</li>
-        <li class="placelist">Place10</li>
-        <li class="placelist">Place11</li>
-      </div>
-      <div class="Contentdiv">
-        hello
-      </div>
-      <script src="/js/route.js"></script>
+      <li class="placelist">Imphal</li>
+      <li class="placelist">Bishnupur</li>
+      <li class="placelist">Thoubal</li>
+      <li class="placelist">Ukhrul</li>
+      <li class="placelist">Churachandpur</li>
+      <li class="placelist">Senapati</li>
+      <li class="placelist">Tamenglong</li>
+      <li class="placelist">Place9</li>
+      <li class="placelist">Place10</li>
+      <li class="placelist">Place11</li>
+    </div>
+    <div class="Contentdiv">
+      <div class="Content-div">Hello</div>
+      <img class="content-img1 content-img1-hidden" src="" alt="" />
+      <!-- I have added some height and widht to the images, later we can add a div around it and make it proper -->
+    </div>
+    <script src="/js/route.js"></script>
   </body>
-
 </html>
