--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="https://picsum.photos/60/40" alt="" />
+      <img class="logo" src="/images/logo.png" alt="" />
     </a>
     <button
       class="navbar-toggler"
